# public_repos

./: .editorconfig  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
000/: CMakeLists.txt  README.md
000/src/: A1dapter.cpp  AbstractFactory.cpp  Abstraction.cpp  AbstractionImp.cpp  Adapter.cpp  Aggregate.cpp  Builder.cpp  C1ontext.cpp  CMakeLists.txt  Colleage.cpp  Command.cpp  Component.cpp  Composite.cpp  Context.cpp  Decorator.cpp  Director.cpp  Element.cpp  Facade.cpp  Factory.cpp  Flyweight.cpp  FlyweightFactory.cpp  Handle.cpp  Interpret.cpp  Invoker.cpp  Iterator.cpp  Leaf.cpp  Mediator.cpp  Memento.cpp  Observer.cpp  P1roduct.cpp  Product.cpp  Prototype.cpp  Proxy.cpp  Reciever.cpp  Singleton.cpp  State.cpp  Strategy.cpp  Subject.cpp  Template.cpp  Visitor.cpp  (+25 more)
000/src/include/: A1dapter.h  AbstractFactory.hpp  Abstraction.h  AbstractionImp.h  Adapter.h  Aggregate.hpp  Builder.h  C1ontext.hpp  C2ontext.hpp  Colleage.hpp  Command.hpp  Component.hpp  Composite.hpp  Context.hpp  Decorator.h  Director.h  Element.hpp  Facade.hpp  Factory.hpp  Flyweight.hpp  FlyweightFactory.hpp  Handle.hpp  Invoker.hpp  Iterator.hpp  Iterpret.hpp  Leaf.hpp  Mediator.hpp  Memento.hpp  Observer.hpp  P1roduct.hpp  Product.hpp  Prototype.h  Proxy.hpp  Reciever.hpp  Singleton.h  State.hpp  Strategy.hpp  Subject.hpp  Template.hpp  Vistor.hpp
001/src/: main.cpp
002/: CMakeLists.txt  Dockerfile  README.md
002/src/: main.cpp
003/src/: CMakeLists.txt  main.cpp
c000/: CMakeLists.txt  Dockerfile  README.md
c000/src/: CMakeLists.txt  main.c
config/: webpack.common.js  webpack.config.js
public/: manifest.json  options.html  popup.html
pybind11-000/: .gitignore  README.md  example.cpp  setup.py
pybind11-001/: .gitignore  CMakeLists.txt  README.md  example.cpp  setup.py
src/: App.test.tsx  App.tsx  app.ts  background.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/clients/: PouchDBClient.ts
src/components/: Breadcrumb.tsx  Navbar.tsx  components.tsx
src/features/posts/: AddNewPost.tsx  PostsList.tsx  posts.css  postsSlice.ts
src/options/: App.tsx  index.tsx  options.css
src/options/components/: DocItem.tsx  DocsShow.tsx
